--- a/unable.html
+++ b/unable.html
@@ -11,6 +11,6 @@
 <body>
     <br>
     <div class="center">
-        <p>App unable to retrieve your ip...</p>
+        <p>Oops something went wrong...</p>
     </div>
 </body>
