minor security changes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
                 class="form-control input" 
                 type="email" 
                 style="text-align:center" 
-                placeholder="Your email"/>
+                placeholder="Your email"
+                autofocus/>
                <br>
                <input 
                 id="f30226c078224a00a336d66b9dd5350f" 
@@ -34,6 +35,7 @@
     <div class="center">
         <button id="f42cc63246d74cf7bc009d858a10b2e4" class="btn btn-info">Submit</button>
     </div>
+    <br>
     <div class="center" id="26ac0de49a8043a4877dccdb1a04fe56"></div>
 </body>
 <script type="text/javascript" src = "/main.js"></script>
